--- a/package.json
+++ b/package.json
@@ -63,14 +63,15 @@
     "setup:testrunner": "wdio run ./wdio.conf.js --spec ./setup/testrunner.js",
     "timezone": "node ./timezone/custom-timezones.js",
     "waitForDisplayed": "cross-env EXAMPLE_RECIPE=waitForDisplayed wdio run ./wdio.conf.js --spec ./waitForDisplayed/waitForDisplayedExample.js",
-    "waitUntil": "cross-env EXAMPLE_RECIPE=waitUntil wdio run ./wdio.conf.js --spec ./waitUntil/waitUntilExample.js"
+    "waitUntil": "cross-env EXAMPLE_RECIPE=waitUntil wdio run ./wdio.conf.js --spec ./waitUntil/waitUntilExample.js",
+    "genTTS": "cross-env EXAMPLE_RECIPE=waitUntil wdio run ./wdio.conf.js --spec ./genTts/test/automation.e2e.js"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^3.1.2",
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/svelte": "^5.2.1",
     "@wdio/browser-runner": "9.1.2",
-    "@wdio/cli": "9.1.2",
+    "@wdio/cli": "^9.1.2",
     "@wdio/local-runner": "9.1.2",
     "@wdio/mocha-framework": "9.1.2",
     "@wdio/spec-reporter": "9.1.2",
